--- a/cpp/.gitignore
+++ b/cpp/.gitignore
@@ -1,1 +1,3 @@
+codejam.xcodeproj/project.xcworkspace/xcuserdata/darren.xcuserdatad/UserInterfaceState.xcuserstate
+codejam.xcodeproj/xcuserdata/darren.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 /Debug
