do not submit xcuserdata

--- a/cpp/.gitignore
+++ b/cpp/.gitignore
@@ -1,3 +1,2 @@
-codejam.xcodeproj/project.xcworkspace/xcuserdata/darren.xcuserdatad/UserInterfaceState.xcuserstate
-codejam.xcodeproj/xcuserdata/darren.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+xcuserdata
 /Debug
