--- a/cpp/codejam/dictionary.in
+++ b/cpp/codejam/dictionary.in
@@ -1,7 +1,21 @@
+4
+2
+i
+j
 3
-3
-2 2 4
+ba
+aa
+ab
 5
-3 1 3 4 1
-8
-1 1 1 1 1 1 1 2
+gg
+kia
+lotte
+lg
+hanhwa
+6
+dictionary
+english
+is
+ordered
+ordinary
+this
